# ohiexamples

./: .gitignore  LICENSE  README.md
Projects/NUCLEO-L073RZ/GPIO_Blink/GPIO_Blink_CMAKE/: CMakeLists.txt  arm-none-eabi-gcc.cmake
Projects/NUCLEO-L073RZ/GPIO_Blink/GPIO_Blink_CUBEIDE/: .cproject  .mxproject  .project  GPIO_Blink_CUBEIDE_L073.ioc
Projects/NUCLEO-L073RZ/GPIO_Blink/src/: main.c  system_stm32l0xx.c
Projects/NUCLEO-L073RZ/IIC_WhoAmI/IIC_WhoAmI_CUBEIDE/: .cproject  .project  IIC_WhoAmI_CUBEIDE_L073.ioc
Projects/NUCLEO-L073RZ/IIC_WhoAmI/src/: main.c
Projects/NUCLEO-L476RG/GPIO_Blink/GPIO_Blink_CMAKE/: CMakeLists.txt
Projects/NUCLEO-L476RG/GPIO_Blink/GPIO_Blink_CUBEIDE/: .cproject  .project
Projects/NUCLEO-L476RG/IIC_WhoAmI/IIC_WhoAmI_CUBEIDE/: .cproject  .project
Projects/NUCLEO-L476RG/IIC_WhoAmI/src/: main.c  system_stm32l4xx.c
Projects/NUCLEO-L476RG/TIMER_FreeCounter/TIMER_FreeCounter_CMAKE/: CMakeLists.txt
Projects/NUCLEO-L476RG/TIMER_FreeCounter/src/: main.c
Projects/NUCLEO-L476RG/UART_CircularResponse/UART_CircularResponse_CMAKE/: CMakeLists.txt
Projects/NUCLEO-L476RG/UART_CircularResponse/UART_CircularResponse_CUBEIDE/: .cproject  .mxproject  .project  GPIO_Blink_CUBEIDE_L476.ioc
Projects/NUCLEO-L476RG/UART_CircularResponse/src/: main.c
Scripts/: clean-all.sh  cmake-gen.sh  compile-all.sh
